k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: budget-app
  labels:
    app: israeli-budget-app
    environment: development
